[gd_scene load_steps=2 format=3 uid="uid://e51vvjm8fhtb"]

[ext_resource type="Script" uid="uid://crkm0j7abb0hd" path="res://src/ControlPanel.gd" id="1_control_panel"]

[node name="ControlPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_control_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.050980393, 0.050980393, 0.050980393, 1)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 249.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 87.0
offset_right = -70.0
offset_bottom = -115.59912
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="Control" parent="MainPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = " Live2D 渲染控制"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ModelGroup" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ModelLabel" type="Label" parent="MainPanel/VBoxContainer/ModelGroup"]
layout_mode = 2
text = "模型切换"

[node name="ModelContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ModelGroup"]
layout_mode = 2

[node name="PrevModelButton" type="Button" parent="MainPanel/VBoxContainer/ModelGroup/ModelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "◀"

[node name="ModelOptionButton" type="OptionButton" parent="MainPanel/VBoxContainer/ModelGroup/ModelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextModelButton" type="Button" parent="MainPanel/VBoxContainer/ModelGroup/ModelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "▶"

[node name="HSeparatorModel" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="AntiAliasingGroup" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="AntiAliasingLabel" type="Label" parent="MainPanel/VBoxContainer/AntiAliasingGroup"]
layout_mode = 2
text = "抗锯齿设置（设置保存后需手动重启）"

[node name="SMAAContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/AntiAliasingGroup"]
layout_mode = 2

[node name="SMAALabel" type="Label" parent="MainPanel/VBoxContainer/AntiAliasingGroup/SMAAContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "SMAA:"

[node name="SMAASlider" type="HSlider" parent="MainPanel/VBoxContainer/AntiAliasingGroup/SMAAContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 0.25
step = 0.01
value = 0.1

[node name="SMAALabelValue" type="Label" parent="MainPanel/VBoxContainer/AntiAliasingGroup/SMAAContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "0.10"

[node name="DebandingCheck" type="CheckBox" parent="MainPanel/VBoxContainer/AntiAliasingGroup"]
layout_mode = 2
button_pressed = true
text = "去条带"

[node name="MipmapCheck" type="CheckBox" parent="MainPanel/VBoxContainer/AntiAliasingGroup"]
layout_mode = 2
button_pressed = true
text = "Mipmap"

[node name="HSeparator2" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ScalingGroup" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ScalingLabel" type="Label" parent="MainPanel/VBoxContainer/ScalingGroup"]
layout_mode = 2
text = "缩放控制"

[node name="ZoomContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ScalingGroup"]
layout_mode = 2

[node name="ZoomLabel" type="Label" parent="MainPanel/VBoxContainer/ScalingGroup/ZoomContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "缩放:"

[node name="ZoomSlider" type="HSlider" parent="MainPanel/VBoxContainer/ScalingGroup/ZoomContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.44

[node name="ZoomLabelValue" type="Label" parent="MainPanel/VBoxContainer/ScalingGroup/ZoomContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "0.44"

[node name="HSeparator3" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ViewportGroup" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ViewportLabel" type="Label" parent="MainPanel/VBoxContainer/ViewportGroup"]
layout_mode = 2
text = "视口设置"

[node name="ResolutionContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ViewportGroup"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MainPanel/VBoxContainer/ViewportGroup/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "分辨率:"

[node name="ResolutionOption" type="OptionButton" parent="MainPanel/VBoxContainer/ViewportGroup/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HDRCheck" type="CheckBox" parent="MainPanel/VBoxContainer/ViewportGroup"]
layout_mode = 2
button_pressed = true
text = "HDR 2D"

[node name="LODContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ViewportGroup"]
layout_mode = 2

[node name="LODLabel" type="Label" parent="MainPanel/VBoxContainer/ViewportGroup/LODContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "LOD:"

[node name="LODSlider" type="HSlider" parent="MainPanel/VBoxContainer/ViewportGroup/LODContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.6

[node name="LODLabelValue" type="Label" parent="MainPanel/VBoxContainer/ViewportGroup/LODContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "0.6"

[node name="HSeparator4" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="PresetButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "预设"

[node name="ResetButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "重置"

[node name="SaveButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存"

[node name="RestartButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "手动重启"

[node name="HSeparator5" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "关闭"
